@@ -942,13 +942,17 @@ class DbTestRecorder extends TestRecorder  {
 	 * and all that fun stuff
 	 */
 	function start() {
+		global $wgDBtype;
 		parent::start();
 
 		$this->db->begin();
 
 		if( ! $this->db->tableExists( 'testrun' ) or ! $this->db->tableExists( 'testitem') ) {
 			print "WARNING> `testrun` table not found in database. Trying to create table.\n";
-			dbsource( dirname(__FILE__) . '/testRunner.sql',  $this->db );
+            if ($wgDBtype === 'postgres')
+				dbsource( dirname(__FILE__) . '/testRunner.postgres.sql',  $this->db );
+			else
+				dbsource( dirname(__FILE__) . '/testRunner.sql',  $this->db );
 			echo "OK, resuming.\n";
 		}
 
@@ -964,7 +968,10 @@ class DbTestRecorder extends TestRecorder  {
 				'tr_uname'       => php_uname()
 			),
 			__METHOD__ );
-		$this->curRun = $this->db->insertId();
+			if ($wgDBtype === 'postgres')
+				$this->curRun = $this->db->currentSequenceValue('testrun_id_seq');
+			else
+				$this->curRun = $this->db->insertId();
 	}
 
 	/**
